--- a/Octoput/Octoput.vcxproj
+++ b/Octoput/Octoput.vcxproj
@@ -147,17 +147,17 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Client.h" />
-    <ClInclude Include="Server.h" />
+    <ClInclude Include="UDPClient.h" />
+    <ClInclude Include="UDPServer.h" />
     <ClInclude Include="Sloxy.h" />
     <ClInclude Include="Socket.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Client.cpp" />
+    <ClCompile Include="UDPClient.cpp" />
     <ClCompile Include="Octoput.cpp" />
-    <ClCompile Include="Server.cpp" />
+    <ClCompile Include="UDPServer.cpp" />
     <ClCompile Include="Sloxy.cpp" />
     <ClCompile Include="Socket.cpp" />
     <ClCompile Include="stdafx.cpp">
