--- a/Octoput/Octoput.vcxproj
+++ b/Octoput/Octoput.vcxproj
@@ -147,9 +147,9 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="global.h" />
     <ClInclude Include="UDPClient.h" />
     <ClInclude Include="UDPServer.h" />
-    <ClInclude Include="Sloxy.h" />
     <ClInclude Include="Socket.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -158,7 +158,6 @@
     <ClCompile Include="UDPClient.cpp" />
     <ClCompile Include="Octoput.cpp" />
     <ClCompile Include="UDPServer.cpp" />
-    <ClCompile Include="Sloxy.cpp" />
     <ClCompile Include="Socket.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
